
An entry should be made for _every_ commit to the repository.
The entries in this file will be used when creating the README
for new versions, so keep that in mind when writing the
description.

The form of an entry should be:

Name: 
Date: yyyy/mm/dd
Tag: <post-commit CVS tag>
Description:

----------------------------------------------------------------------
Name: Matthias Blume
Date: 2001/01/25 21:27:00 EST
Tag: Release_110_38
Description:

Call it a (working) release!  Version is 110.38. Bootfiles are ready.

README will be added later.

----------------------------------------------------------------------
Name: Matthias Blume
Date: 2002/01/25
Tag: blume-20020125-ffi
Description:

A large number of tweaks and improvements to ml-nlffi-lib and
ml-nlffigen:

   - ML represenation types have been streamlined
   - getter and setter functions work with concrete values, not abstract
     ones where possible
   - ml-nlffigen command line more flexible (see README file there)
   - some bugs have been fixed (hopefully)

----------------------------------------------------------------------
Name: Lal George
Date: 2002/01/24
Tag: george-20020124-risc-ra-interface
Description:

   There is a dramatic simplification in the interface to the
   register allocator for RISC architectures as a result of making 
   parallel copy instructions explicit. 
   
----------------------------------------------------------------------
Name: Matthias Blume
Date: 2002/01/22
Tag: blume-20020122-x86-ccalls
Description:

Bug fix for c-calls on x86 (having to do with how char- and
short-arguments are being handled).

----------------------------------------------------------------------
Name: Matthias Blume
Date: 2002/01/21
Tag: blume-20020121-ff
Description:

Another day of fiddling with the FFI...

1. Bug fix/workaround:  CKIT does not complain about negative array
   dimensions, so ml-nlffigen has to guard itself against this possibility.