@@ -96,6 +96,14 @@ TARGETS="$TARGETS smlnj-lib"
 #
 #TARGETS="$TARGETS mlrisc-tools"
 
+# Build and install the 'nowhere' program translator.
+# This tool translates programs with conditional patterns (where clauses) 
+# into legal SML code.  See MLRISC/Tools/Doc/nowhere.tex for its
+# (bad) documentation.
+# (Requires the mlrisc-tools library!)
+#
+#TARGETS="$TARGETS nowhere"
+
 # unpack and install the documentation directory.
 #
 #TARGETS="$TARGETS doc"
